@@ -207,6 +207,7 @@ Config =
         10, 11, 12, 13, 14
       ]]
       'Mascots':                   [true,              'Add a pretty picture of your waifu to the sidebar.']
+      'Mascots Overlap Posts':     [true,              'Mascots overlap threads and posts.']
       'Rounded Edges':             [true,              'Round the edges of various 4chan elements.']
       'Sage Highlighting':         ['image',           'Icons or text to highlight saged posts.', [
         'text', 'image', 'none'
