@@ -2,6 +2,8 @@ master
 - Zixaphir
   Changed the font option from a dropdown to a text input.
   Options are now fixed positioned instead of absolutely.
+  New option:
+    - Mascots Overlap Postform
 
 0.7.1beta
 - Zixaphir
